--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
+  <div>version 12</div>
   <div class="container">
     <div class="image-container">
       <div class="slider__slide">
